<resources>
    <string name="app_name">Todo-App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_log_in">Sing up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account_lets">No account?\nLet\'s go to create your profile!</string>
</resources>